WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
12594
REGRESSION: Strange highlight in active input area
https://bugs.webkit.org/show_bug.cgi?id=12594
Summary
REGRESSION: Strange highlight in active input area
Maciej Stachowiak
Reported
2007-02-04 11:03:04 PST
2006-09-01 11:51:45 Yasuo Kida: Strange highlight in active input area. When you enter Japanese text, selected segment is highlighted with highlight color-it should not. See the screen shot. Above is Mail on 9A255 and below is take on Stickies. This is a regression from Tiger. 1) Enable Kotoeri input method from International Preference. 2) Select Hiragana mode from the Text Input Menu 3) Type "toukyouhaame" and convert. (it means it rains in Tokyo) => Observe the first segment is highlighted with highlighting color. 2006-09-01 11:55:42 Yasuo Kida: It looks very strange and should be fixed for Leopard (if you wonder about the priority, imagine a priority you would pick when regular highlighting of text is visually broken). 2006-10-11 17:44:34 Stephanie Lewis: Verified in Leopard 9A274. This is a regression from Safari 2.0.4 2006-10-24 10:38:45 Timothy Hatcher: Safari BRB Reviewed 2006-12-15 20:00:55 Stephanie Lewis: Still occurs in Leopard 9A325 <
rdar://problem/4713881
>
Attachments
proposed fix
(1.14 KB, patch)
2007-02-26 11:35 PST
,
Alexey Proskuryakov
mjs
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2007-02-26 11:19:26 PST
This has regressed between
r12791
and
r12804
.
Alexey Proskuryakov
Comment 2
2007-02-26 11:35:22 PST
Created
attachment 13383
[details]
proposed fix
Maciej Stachowiak
Comment 3
2007-02-27 01:49:32 PST
Comment on
attachment 13383
[details]
proposed fix r=me
Alexey Proskuryakov
Comment 4
2007-02-27 10:06:24 PST
Committed revision 19886.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug