        Reviewed by Maciej.

http://bugs.webkit.org/show_bug.cgi?id=12594
        REGRESSION: Strange highlight in active input area

        No automated test possible.

        * rendering/InlineTextBox.cpp:
        (WebCore::InlineTextBox::paint): Restore a check lost in r12792.



Canonical link: https://commits.webkit.org/16723@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@19886 268f45cc-cd09-0410-ab3c-d52691b4dbfc